--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
+        "cartalyst/sentinel": "^5.0",
+        "illuminate/database": "^8.25",
+        "illuminate/events": "^8.25",
         "mikehaertl/php-pdftk": "^0.9.2",
         "mongodb/mongodb": "^1.8",
         "php-di/php-di": "^6.0",
@@ -7,14 +10,18 @@
         "rlanvin/php-rrule": "^2.2",
         "selective/basepath": "^1.0",
         "selective/validation": "^0.12.0",
+        "slim/csrf": "^1.2",
+        "slim/flash": "^0.4.0",
         "slim/psr7": "^1",
         "slim/slim": "4.4",
         "slim/twig-view": "^3.1",
+        "symfony/http-foundation": "^5.2",
         "symfony/polyfill-uuid": "^1.20",
         "symfony/translation": "^5.2",
         "symfony/twig-bridge": "^5.2",
         "tmw/fpdm": "^2.9",
         "vlucas/phpdotenv": "^5.2",
+        "vlucas/valitron": "^1.4",
         "wildbit/postmark-php": "^4.0"
     },
     "require-dev": {
